use std::sync::Arc;
use tokio::sync::mpsc;
use tracing::info;
use dotenv;

use axum::{
    routing::get,
    Router,
    extract::{DefaultBodyLimit, State},
    Json,
};
use tower::ServiceBuilder;
use tower_http::{
    cors::CorsLayer,
    trace::TraceLayer,
};
use tracing_subscriber::{layer::SubscriberExt, util::SubscriberInitExt};
use serde_json::json;

use gameverse_chat::{
    AppState, ChatService, ChannelService, VoiceService, 
    MessageRepository, ChannelRepository, RedisService, ChatConfig
};
use gameverse_chat::interfaces::{
    http::health_check,
    websocket::WebSocketServer,
};

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    // –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –ª–æ–≥–∏—Ä–æ–≤–∞–Ω–∏—è
    tracing_subscriber::registry()
        .with(
            tracing_subscriber::EnvFilter::try_from_default_env()
                .unwrap_or_else(|_| "gameverse_chat=debug,tower_http=debug".into()),
        )
        .with(tracing_subscriber::fmt::layer())
        .init();

    // –ó–∞–≥—Ä—É–∑–∫–∞ –ø–µ—Ä–µ–º–µ–Ω–Ω—ã—Ö –æ–∫—Ä—É–∂–µ–Ω–∏—è
    dotenv::dotenv().ok();

    // –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏
    let config = ChatConfig::default();

    info!("Starting GameVerse Chat Service");
    info!("HTTP Server will run on {}:{}", config.server.host, config.server.http_port);
    info!("gRPC Server will run on {}:{}", config.server.host, config.server.grpc_port);
    info!("WebSocket Server will run on {}:{}", config.server.host, config.server.websocket_port);
    
    if config.telegram.enabled {
        info!("Telegram integration enabled");
    }

    // –°–æ–∑–¥–∞–µ–º –∫–∞–Ω–∞–ª –¥–ª—è —Å–æ–±—ã—Ç–∏–π —á–∞—Ç–∞
    let (event_sender, _event_receiver) = mpsc::channel(1000);

    // –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö
    info!("Initializing database connection...");
    let database_url = std::env::var("DATABASE_URL")
        .unwrap_or_else(|_| "postgresql://gameverse:gameverse@localhost:5434/gameverse_chat".to_string());
    
    let pool = sqlx::PgPool::connect(&database_url).await?;
    
    // –ó–∞–ø—É—Å–∫ –º–∏–≥—Ä–∞—Ü–∏–π
    sqlx::migrate!("./migrations").run(&pool).await?;
    
    // –°–æ–∑–¥–∞–Ω–∏–µ —Å–µ—Ä–≤–∏—Å–æ–≤
    let message_repository = Arc::new(MessageRepository::new(pool.clone()));
    let channel_repository = Arc::new(ChannelRepository::new(pool.clone()));
    
    let redis_config = gameverse_chat::infrastructure::redis::RedisConfig {
        url: std::env::var("REDIS_URL").unwrap_or_else(|_| "redis://localhost:6379".to_string()),
        max_connections: 10,
        pool_timeout: 30,
        command_timeout: 5,
    };
    let redis_service = Arc::new(RedisService::new(&redis_config).await?);
    info!("Redis initialized successfully");

    // –°–æ–∑–¥–∞–Ω–∏–µ —Å–µ—Ä–≤–∏—Å–æ–≤ –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è
    let chat_service = Arc::new(ChatService::new(
        message_repository.clone(),
        channel_repository.clone(),
        redis_service.clone(),
        Arc::new(config.clone()),
        event_sender.clone(),
    ));

    let channel_service = Arc::new(ChannelService::new(
        channel_repository.clone(),
        redis_service.clone(),
        Arc::new(config.clone()),
        event_sender.clone(),
    ));

    let voice_service = Arc::new(VoiceService::new(
        redis_service.clone(),
        Arc::new(config.clone()),
        event_sender.clone(),
    ));

    // –°–æ–∑–¥–∞–Ω–∏–µ WebSocket —Å–µ—Ä–≤–µ—Ä–∞
    let websocket_server = Arc::new(WebSocketServer::new(
        chat_service.clone(),
        voice_service.clone(),
    ));

    // –ù–∞—Å—Ç—Ä–æ–π–∫–∞ CORS
    let cors = CorsLayer::new()
        .allow_origin("http://localhost:3000".parse::<axum::http::HeaderValue>().unwrap())
        .allow_methods([axum::http::Method::GET, axum::http::Method::POST])
        .allow_headers([axum::http::header::CONTENT_TYPE]);

    // –°–æ–∑–¥–∞–Ω–∏–µ —Å–æ—Å—Ç–æ—è–Ω–∏—è –ø—Ä–∏–ª–æ–∂–µ–Ω–∏—è
    let app_state = AppState {
        chat_service,
        channel_service,
        voice_service,
        redis_service,
        websocket_server: websocket_server.clone(),
        config: Arc::new(config),
    };
    
    // –†–æ—É—Ç—ã –¥–ª—è –æ—Å–Ω–æ–≤–Ω–æ–≥–æ API (–∏—Å–ø–æ–ª—å–∑—É—é—Ç AppState)
    let api_routes = Router::new()
        .route("/health", get(health_check))
        .route("/api/v1/ws/stats", get(get_websocket_stats))
        .route("/api/v1/ws/users", get(get_active_users))
        .with_state(app_state);

    // –†–æ—É—Ç—ã –¥–ª—è WebSocket (–∏—Å–ø–æ–ª—å–∑—É—é—Ç Arc<WebSocketServer>)
    let ws_routes = Router::new()
        .route("/ws", get(WebSocketServer::handle_websocket))
        .with_state(websocket_server);
    
    // –û–±—ä–µ–¥–∏–Ω—è–µ–º —Ä–æ—É—Ç—ã
    let app = Router::new()
        .merge(api_routes)
        .merge(ws_routes)
        .layer(
            ServiceBuilder::new()
                .layer(TraceLayer::new_for_http())
                .layer(cors)
                .layer(DefaultBodyLimit::max(16 * 1024 * 1024)) // 16MB
        );
    
    let listener = tokio::net::TcpListener::bind("0.0.0.0:8080").await?;
    
    tracing::info!("üöÄ GameVerse Chat Server –∑–∞–ø—É—â–µ–Ω –Ω–∞ http://0.0.0.0:8080");
    tracing::info!("üì° WebSocket endpoint: ws://0.0.0.0:8080/ws");
    tracing::info!("üè• Health check: http://0.0.0.0:8080/health");
    tracing::info!("üìù API –¥–æ–∫—É–º–µ–Ω—Ç–∞—Ü–∏—è –±—É–¥–µ—Ç –¥–æ—Å—Ç—É–ø–Ω–∞ –≤ –±—É–¥—É—â–µ–º");
    
    axum::serve(listener, app).await?;
    
    Ok(())
}

/// –ü–æ–ª—É—á–µ–Ω–∏–µ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ WebSocket —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–π
async fn get_websocket_stats(
    State(state): State<AppState>,
) -> Json<serde_json::Value> {
    let connection_count = state.websocket_server.get_connection_count().await;
    
    Json(json!({
        "active_connections": connection_count,
        "server_uptime": "TODO", // –î–æ–±–∞–≤–∏—Ç—å –ø–æ–∑–∂–µ
        "total_messages_sent": "TODO", // –î–æ–±–∞–≤–∏—Ç—å —Å—á–µ—Ç—á–∏–∫
        "status": "healthy"
    }))
}

/// –ü–æ–ª—É—á–µ–Ω–∏–µ —Å–ø–∏—Å–∫–∞ –∞–∫—Ç–∏–≤–Ω—ã—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
async fn get_active_users(
    State(state): State<AppState>,
) -> Json<serde_json::Value> {
    let users = state.websocket_server.get_active_users().await;
    
    let user_list: Vec<serde_json::Value> = users
        .into_iter()
        .map(|(user_id, username, position)| {
            json!({
                "user_id": user_id,
                "username": username,
                "position": position,
                "status": "online"
            })
        })
        .collect();
    
    Json(json!({
        "users": user_list,
        "total_count": user_list.len()
    }))
} 